== Version 2.6.7 - unreleased

== Version 2.6.6 - 2017-06-09 Jeremy Daer <jeremydaer@gmail.com>

Security:
* #1097 – SMTP security: prevent command injection via To/From addresses. (jeremy)

Bugs:
* #689 - Fix Exim delivery method broken by #477 in 2.5.4. (jethrogb)

== Version 2.6.5 - 2017-04-26 Jeremy Daer <jeremydaer@gmail.com>

Features:
* #1053 - Ruby 2.4.0 compatibility. Fixnum+Bignum unified as Integer. (peterkovacs)

Bugs:
* #605 - Fix Mail::Address#name for nil addresses (peterkovacs)
* #1003 - Fix decoding some b encoded headers on specific rubies that don't account for lack of base64 padding (kjg)
* #1023 - Fix double-quoting in display names. (garethrees)

== Version 2.6.4 - Wed Mar 23 08:16 -0700 2016 Jeremy Daer <jeremydaer@gmail.com>

Features:
* #772 - Normalize encoding matchers (grosser)
* #775 - Avoid failed encodings / stop bad charsets early (grosser)
* #782 – Make the gem compatible with Rubinius (robin850)
* #865 - Allow a body with an invalid encoding to be round tripped (kjg)
* #866 - Support decoding message bodies with non-Ruby-standard charsets (jeremy)
* #868 - Use the Ruby19.charset_encoder when decoding message bodies (kjg)
* #872 - Low-level option to include BCC field in the encoded message (grossadamm)
* #901 - Allow mail.text_part = '…' and mail.html_part = '<p>…</p>' (taavo)
* #924 - Matcher for having attachments (schepedw)

Performance:
* #956 - Use native String#encode for CR/LF conversion (carsonreinke)
* #970 - Support Ruby 2.3+ frozen string literals (twalpole)

Bugs:
* #719 - Fix to not extract header content that looks like its field name (kjg)
* #789 - Fix encoding collapsing not dealing with multiple encodings in 1 line (grosser)
* #808 - Mail::Field correctly responds_to? the methods of its instantiated field (thegcat)
* #849 - Handle calling Part#inline? when the Content-Disposition field couldn't be parsed (kjg)
* #874 – Stay under 1000-char SMTP line length limits (pushrax)